force-app/main/default/objects/Admin_Profile_Setting__mdt/Admin_Profile_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Used for restricting non-admin users to delete objects specified here with customized error message (HRP-10115)</description>
    <label>Admin Profile Setting</label>
    <pluralLabel>Admin Profile Settings</pluralLabel>
</CustomObject>