force-app/main/default/objects/Admin_Profile_Setting__mdt/fields/Error_Msg__c.field-meta.xml
<CustomField>
    <fullName>Error_Msg__c</fullName>
    <description>Provides customized error msg to user</description>
    <label>Error Message</label>
    <type>TextArea</type>
</CustomField>