force-app/main/default/objects/Admin_Profile_Setting__mdt/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <label>Allowed Profiles</label>
    <length>200</length>
    <type>Text</type>
</CustomField>